# TerminaSSH

./: .gitignore  LICENSE  README.md  backup.sh  clean.sh  make_icons.sh  package-lock.json  package.json  s  vite.config.ts
.github/workflows/: build-windows.yml  deploy-homepage.yml  release-draft.yml
homepage/: index.html  package-lock.json  package.json  vite.config.js
homepage/src/: App.jsx  index.css
src/: App.tsx  app.css  index.css  main.tsx
src-tauri/: Cargo.toml  index.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: io.github.kahikara.terminassh.desktop
src-tauri/src/: app_paths.rs  app_setup.rs  app_state.rs  backup.rs  connection_test.rs  connections.rs  db_core.rs  external_commands.rs  host_keys.rs  lib.rs  local_fs.rs  pty_commands.rs  sftp_commands.rs  snippets.rs  ssh_keys.rs  ssh_runtime.rs  status_bar.rs  system_commands.rs  tunnels.rs  vault_commands.rs  vault_core.rs  window_commands.rs  window_state.rs
src/components/: ConnectionModal.tsx  Dashboard.tsx  DraggedTabGhost.tsx  GlobalDialog.tsx  InputContextMenu.tsx  KeyManagerModal.tsx  LinuxTitlebar.tsx  LocalFilesPanel.tsx  MainCloseDialog.tsx  NotesPanel.tsx  QuickConnectDialog.tsx  SessionCloseDialog.tsx  SettingsAboutCard.tsx  SettingsAboutSection.tsx  SettingsBackupCards.tsx  SettingsBackupSection.tsx  SettingsGeneralSection.tsx  SettingsKeysSection.tsx  SettingsModal.tsx  SettingsModalHeader.tsx  SettingsSecuritySection.tsx  SettingsSftpSection.tsx  SettingsSidebar.tsx  SettingsStatusBarSection.tsx  SettingsStyles.ts  (+18 more)
(+28 files in other folders)
