[package]
name = "termina-ssh"
version = "1.0.4"
description = "A modern SSH workspace built with Tauri, Rust, and React"
authors = ["kahikara"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.8"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.10.0"
base64 = "0.22.1"
chrono = "0.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-os = "2.3.2"

